--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <div class="skill css">&nbsp;</div>
     </div>
 
-    <p>JavScript</p>
+    <p>JavaScript</p>
     <div class="container">
         <div class="skill JS">&nbsp;</div>
     </div>
