Responsive Projects Section

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 
 <section id="projects">
 <h1 class="top">PROJECTS</h1>
-<div class="main">
 
 
+<div class="flip-card-container">
  <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
@@ -98,6 +98,7 @@
           </div>
         </div>
       </div>
+    </div>
     </section>
   </div>
 </div>
