--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 <i class="fab fa-linkedin-in"></i></a>
               <i class="fab fa-twitter"></i>
              <a href="https://github.com/2024-SANDHYA" target="_blank"> <i class="fab fa-github"></i></a>
-              <a href="sandhyaagarwal03180@gmail.com"> <i class="fas fa-paper-plane"></i>  </a>
+              <a href="mailto:sandhyaagarwal03180@gmail.com"> <i class="fas fa-paper-plane"></i>  </a>
 
             </p>
           
