🚀 Performance Patches Converted PNGs to Webp Minified CSS

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="flip-card-inner">
         <div class="flip-card-front">
  
-          <img src="./Images/bakery.png" class="box" style="width:300px;height:300px;">
+          <img src="./Images/bakery.webp" class="box" style="width:300px;height:300px;">
         </div>
         <div class="flip-card-back">
           <h1>BAKERY</h1> 
@@ -74,7 +74,7 @@
     <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="./Images/bd.png" class="box"  style="width:300px;height:300px;">
+            <img src="./Images/bd.webp" class="box"  style="width:300px;height:300px;">
           </div>
           <div class="flip-card-back">
             <h1>BLOOD DONATION</h1> 
@@ -88,7 +88,7 @@
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="./Images/third.png" class="box" style="width:300px;height:300px;">
+            <img src="./Images/third.webp" class="box" style="width:300px;height:300px;">
           </div>
           <div class="flip-card-back">
             <h1>COMING SOON!!</h1> 
@@ -250,7 +250,7 @@
   <div class="con">
     <div class="cont">
       <div class="image-box">
-       <img src="./Images/contact.png" alt="" class="vert">
+       <img src="./Images/contact.webp" alt="" class="vert">
       </div>
     <form action="#">
       <div class="topic">Get In Touch!</div>
